# cpp-new-project

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  configure.bat
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  hello.yml  main.yml
lib/Project/: Sorting.cpp  Sorting.hpp
scripts/git-hooks/: pre-commit
scripts/git/hooks/: install-hooks  post-update  pre-commit  pre-push  push-to-checkout  update
scripts/utils/: logger.sh  testLogger.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  behaviourTests.cpp
tests/AcceptanceTests/: CMakeLists.txt  SortingTests.cpp
tests/PerformanceTests/: CMakeLists.txt
tests/UnitTests/: CMakeLists.txt  SortingTests.cpp
